ewarehouse-apex/api/src/objects/Sale_Farmer__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Applied__c</fullName>
        <label>Amount Applied</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Farmer__c</fullName>
        <label>Farmer</label>
        <referenceTo>Farmer__c</referenceTo>
        <relationshipLabel>Sales Farmers</relationshipLabel>
        <relationshipName>Sales_Farmers</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sale__c</fullName>
        <label>Sale</label>
        <referenceTo>Sale__c</referenceTo>
        <relationshipLabel>Sales Farmers</relationshipLabel>
        <relationshipName>Sales_Farmers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Sale Farmer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SF-{000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Farmers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>